[project]
name = "imitation-learning"
version = "0.1.0"
description = "CS 6955 Advanced A.I. introducion into imitation learning assignment"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "gym==0.25.2",
    "numpy==1.23.5",
    "pygame>=2.6.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
